--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "0.11" %}
+{% set version = "0.12.2" %}
 
 package:
   name: glue-vispy-viewers
@@ -7,7 +7,7 @@ package:
 source:
   fn: glue-vispy-viewers-{{version}}.tar.gz
   url: https://pypi.io/packages/source/g/glue-vispy-viewers/glue-vispy-viewers-{{version}}.tar.gz
-  sha256: 252bb439a3ed733d817bdf2d5ea6456ceceb7234c17ac319846e6c09c2975ae3
+  sha256: 3bc00472624e53c2d5ecb50d7bce29acdb2e6f6459694188044daa62c76ae8cf
 
 build:
   noarch: python
@@ -19,6 +19,7 @@ requirements:
   host:
     - python
     - setuptools
+    - setuptools_scm
 
   run:
     - python
